Refactored prompts and index.html layout

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h1 class = "title is-1">My Team</h1>
         </section>
     </header>
-    <main class="is-flex is-flex-direction-column">
-        <div class= "columns m-6">
-            <div class = "column is-one-third">
+    <main>
+        <section class="columns is-flex-wrap-wrap is-justify-content-center">
+            <div class = "column is-4">
                 <div class = "card">
                     <div class = "is-flex is-flex-direction-column card-header has-background-info">
                         <p class="title ml-5 pt-5 has-text-white">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "column">
+            <div class = "column is-4">
                 <div class = "card">
                     <div class = "is-flex is-flex-direction-column card-header has-background-info">
                         <p class="title ml-5 pt-5 has-text-white">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "column">
+            <div class = "column is-4">
                 <div class = "card">
                     <div class = "is-flex is-flex-direction-column card-header has-background-info">
                         <p class="title ml-5 pt-5 has-text-white">
@@ -101,10 +101,8 @@
                     </div>
                 </div>     
             </div>
-        </div>
 
-        <div class= "is-flex is-justify-content-center columns mr-6 ml-6 mb-6 mt-0">
-            <div class = "column is-one-third">
+            <div class = "column is-4">
                 <div class = "card">
                     <div class = "is-flex is-flex-direction-column card-header has-background-info">
                         <p class="title ml-5 pt-5 has-text-white">
@@ -129,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "column is-one-third">
+            <div class = "column is-4">
                 <div class = "card">
                     <div class = "is-flex is-flex-direction-column card-header has-background-info">
                         <p class="title ml-5 pt-5 has-text-white">
@@ -154,8 +152,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-
+        </section>
     </main>
     
 </body>
