--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <p>Hello</p>
                         </div>
                         <div class="box ml-3 mr-3">
-                            <p>Hello</p>
+                            <p>Email: <a href="mailto:(email)">Hello</a></p>
                         </div>
                         <div class="box ml-3 mr-3">
                             <p>Hello</p>
